<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="hint">0 / 100</string>
    <string name="score_0">Score:0</string>
    <string name="_0_00">0.00</string>
    <string name="play">Play</string>
    <string name="high_score_0">High score: 0</string>
</resources>
